# software-layer

./: .gitignore  072-eb-5.0.0.yml  Dockerfile.fuse-overlay-debian10-aarch64  Dockerfile.fuse-overlay-debian10-ppc64le  Dockerfile.fuse-overlay-debian10-x86_64  EESSI-2023.06-extend.eb  EESSI-determine-rebuilds.sh  EESSI-extend-2023.06-easybuild.eb  EESSI-extend-easybuild.eb  EESSI-install-software.sh  EESSI-pilot-2020.08_init.sh  EESSI-pilot-2020.09.sh  EESSI-pilot-install-software.sh  EESSI-remove-software.sh  README.md  Rust-1.65.0-GCCcore-12.2.0.eb  Rust-1.70.0-GCCcore-12.2.0.eb  build-and-deploy.sh  build-and-tar.sh  build_container.sh  cfg_files.sh  check_missing_installations.sh  clone_eessi_test_suite.sh  configure_easybuild  create_dataset_tarball.sh  create_directory_tarballs.sh  create_init_tarball.sh  create_lmodrc.py  create_lmodsitepackage.py  create_tarball.sh  default.local  det_submit_opts.py  eb_hooks.py  eessi-2020.12.yml  eessi-2021.03.yml  eessi-2021.06.yml  eessi-2021.12.yml  eessi-2022.11.yml  eessi-2023.04-eb-4.7.2-2021a.yml  eessi-2023.06-eb-4.7.2-2021a.yml  (+44 more)
.github/: pull_request_template.md
bot/: bot-eessi-aws-citc.cfg  build.sh  check-build.sh  check-result.sh  check-test.sh  commit_sha  inspect.sh  test.sh
easyconfigs/: CGAL-4.14.3-gompi-2020a-Python-3.8.2.eb  fontconfig-2.13.92-GCCcore-9.3.0.eb
eessi-init/: setup.cfg
eessi-init/src/eessi-init/: eessi-init
gpu_support/: README.md  add_amd_gpu_support.sh  add_gpu_support.sh  add_nvidia_gpu_support.sh  get_cuda_compatlibs.sh  get_latest_cuda_compatlibs.sh  install_cuda_compatlibs.sh  (+3 more)
(+707 files in other folders)
