[metadata]
name = eessi-init
version = 0.0.1
author = Example Author
author_email = author@example.com
description = Packaged eessi-init command
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EESSI/software-layer
project_urls =
    Bug Tracker = https://github.com/EESSI-software-layer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
